--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "node --watch src/index.js"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.3"
   }
 }
