--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "format:check": "prettier --check \"src/**/*.js\""
   },
   "dependencies": {
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "mongoose": "^9.1.1"
   },
   "devDependencies": {
     "prettier": "^3.7.4"
