--- a/vidtube-frontend/package.json
+++ b/vidtube-frontend/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.11",
+    "autoprefixer": "^10.4.23",
     "axios": "^1.13.2",
+    "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
