fix: ensure temp upload directory exists in Dockerfile

--- a/vidtube-backend/Dockerfile
+++ b/vidtube-backend/Dockerfile
@@ -6,6 +6,9 @@ RUN npm install --omit=dev
 
 COPY . .
 
+# Ensure temp upload directory exists
+RUN mkdir -p /app/public/temp
+
 ENV NODE_ENV=production
 EXPOSE 8080
 CMD ["npm", "start"]
