--- a/vidtube-frontend/package.json
+++ b/vidtube-frontend/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@tanstack/react-query": "^5.90.16",
     "@tanstack/react-query-devtools": "^5.91.2",
+    "@vercel/speed-insights": "^1.3.1",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "dompurify": "^3.3.1",
